--- a/programming principles I/lectures/lecture 1/lecture1.tex
+++ b/programming principles I/lectures/lecture 1/lecture1.tex
@@ -31,7 +31,7 @@
     }
     
     \title[Programming Principles I]{Lecture I}
-    \author{Baisakov B., Akshabaev A., Muhsimbaev B.}
+    \author{Baisakov B., Akshabaev A., Mukhsimbaev B., Amanov A., Buzaubakov R.}
     \institute{Kazakh-British Technical University}
     \date{Week 1}
 
@@ -52,27 +52,46 @@
 
     \section{Compiling and executing program}
     \begin{frame}{Compiling and executing program}
+      1. g++ file.cpp \textit{//compiling}\\
+      2. for mac and linux: ./a.out \textit{//executing}\\
+      3. for windows: a.exe \textit{//executing}\\
     \end{frame}
 
     \section{Introduction to data types}
     \begin{frame}{Introduction to data types}
-     
+      \begin{tabular}{ |c | c|  }
+        \hline
+        Type & Size \\
+        \hline
+        bool, char, unsigned char, signed char  &	1 byte \\
+        short, unsigned short  &	2 bytes \\
+        float, int, unsigned int, long, unsigned long & 4 bytes \\
+        double, long double, long long &	8 bytes \\
+        \hline
+       \end{tabular}
     \end{frame}
 
-    \section{Representing Numbers: int, double, float}
+    \section{Primitive data types: int, double, float}
     \begin{frame}{Representing Numbers: int, double, float}
+      int a;\\
+      double b;\\
+      float c;\\
     \end{frame}
 
     \section{Comments}
     \begin{frame}{Comments}
+      \lstinputlisting{samplecode2.cpp}
     \end{frame}
-    
-    \section{Introduction to piazza}
+       \section{Introduction to piazza}
     \begin{frame}{Introduction to piazza}
+      \url{https://bit.ly/2wtGLFa}\\
+        or\\
+      \url{piazza.com/kazak_british_technical_university/fall2018/pp1}\\
+      access code: \textbf{pp1}\\
     \end{frame}
 
     \section{Laboratory work 1}
     \begin{frame}{Laboratory work 1}
     \end{frame}
-    
+      details in piazza\\
     \end{document}
