--- a/programming principles I/lectures/lecture 1/lecture1.tex
+++ b/programming principles I/lectures/lecture 1/lecture1.tex
@@ -13,7 +13,9 @@
       \setbeamertemplate{navigation symbols}{}
       \setbeamertemplate{caption}[numbered]
     } 
-    
+
+
+    \usepackage{bookmark}
     \usepackage[english]{babel}
     \usepackage[utf8x]{inputenc}
     \usepackage{csvsimple}
