--- a/programming principles I/hands on labs/hol1/lab1.tex
+++ b/programming principles I/hands on labs/hol1/lab1.tex
@@ -1,20 +1,13 @@
 \documentclass[12pt]{article}%
     \usepackage[final]{pdfpages}
-
-
     \begin{document}
     \title{Lab work 1}
     \date{week 1}
     \author{PP1}
-
-
-
     \maketitle
-    \thispagestyle{empty}
-    \includepdf[pages=-]{task1.pdf}
-    \includepdf[pages=-]{task2.pdf}
-    \includepdf[pages=-]{task3.pdf}
-    \includepdf[pages=-]{task4.pdf}
-    \includepdf[pages=-]{task5.pdf}
-
+    \includepdf[pages=-]{37267.pdf}
+    \includepdf[pages=-]{51191.pdf}
+    \includepdf[pages=-]{51445.pdf}
+    \includepdf[pages=-]{51447.pdf}
+    \includepdf[pages=-]{71697.pdf}
 \end{document}
