--- a/programming principles I/hands on labs/hol2/lab2.tex
+++ b/programming principles I/hands on labs/hol2/lab2.tex
@@ -14,14 +14,14 @@
         breakatwhitespace=false,
     }
     \begin{document}
-    \section{Lab work 1}
+    \section{lab work 2}
     \section{usefull links for this lab}
     \section{problem set}
-    \includepdf[pages=-]{37267.pdf}
-    \includepdf[pages=-]{71697.pdf}
-    \includepdf[pages=-]{51447.pdf}
-    \includepdf[pages=-]{51191.pdf}
-    \includepdf[pages=-]{51445.pdf}
+    %\includepdf[pages=-]{37267.pdf}
+    %\includepdf[pages=-]{71697.pdf}
+    %\includepdf[pages=-]{51447.pdf}
+    %\includepdf[pages=-]{51191.pdf}
+    %\includepdf[pages=-]{51445.pdf}
 
     \section{lab contest}
     
@@ -29,13 +29,32 @@
     Feel free to submit your solutions without attempt count penalty.
 
     \section{solutions}
-    \lstinputlisting{37267.cpp}
-    \lstinputlisting{71697.cpp}
-    \lstinputlisting{51447.cpp}
-    \lstinputlisting{51191.cpp}
-    \lstinputlisting{51445.cpp}
 
-    \section{Additional tasks for this lab}
+    \lstinputlisting{72769.cpp}
+    \lstinputlisting{72770.cpp}
+    \lstinputlisting{72772.cpp}
+    \lstinputlisting{72773.cpp}
+    \lstinputlisting{72776.cpp}
+    \lstinputlisting{72778.cpp}
+    \lstinputlisting{72779.cpp}
+    \lstinputlisting{72782.cpp}
+    \lstinputlisting{72784.cpp}
+    \lstinputlisting{72785.cpp}
+    \lstinputlisting{72789.cpp}
+    \lstinputlisting{72789.cpp}
+    \lstinputlisting{72792.cpp}
+    \lstinputlisting{72794.cpp}
+    \lstinputlisting{72795.cpp}
+
+
+
+    %\lstinputlisting{37267.cpp}
+    %\lstinputlisting{71697.cpp}
+    %\lstinputlisting{51447.cpp}
+    %\lstinputlisting{51191.cpp}
+    %\lstinputlisting{51445.cpp}
+
+    \section{additional tasks for this lab}
     You can solve problems starting from A to J from the link below:\\
     \url{https://informatics.msk.ru/mod/statements/view.php?id=2296}\\
     \textit{note: statements are in russian}
