--- a/programming principles I/hands on labs/hol1/lab1.tex
+++ b/programming principles I/hands on labs/hol1/lab1.tex
@@ -2,42 +2,50 @@
     \usepackage[final]{pdfpages}
     \usepackage{listings} %For code in appendix
     \usepackage{hyperref}
+    \usepackage{alltt}
     \lstset
     { %Formatting for code in appendix
         language=c++,
         basicstyle=\footnotesize,
         numbers=left,
         stepnumber=1,
-        showstringspaces=false,
+        showstringspaces=false,                                                           
         tabsize=1,
         breaklines=true,
         breakatwhitespace=false,
     }
     \begin{document}
-    \section{Lab work 1}
     \section{usefull links for this lab}
+    \begin{itemize}
+        \item \url{http://www.cplusplus.com}
+        \item \url{http://www.mingw.org/wiki/MinGW_for_First_Time_Users_HOWTO}
+        \item \url{https://www.geeksforgeeks.org/c-data-types/}
+    \end{itemize}
+    
     \section{problem set}
     \includepdf[pages=-]{37267.pdf}
     \includepdf[pages=-]{71697.pdf}
     \includepdf[pages=-]{51447.pdf}
     \includepdf[pages=-]{51191.pdf}
-    \includepdf[pages=-]{51445.pdf}
 
     \section{lab contest}
     
-    All given tasks are emplaced in automated checker system for \textbf{lab1}: \url{http://acm.kbtu.kz/cgi-bin/new-register?action=211&contest_id=125}\\
+    All given task are emplaced in automated checker system for \textbf{lab1}: \url{http://acm.kbtu.kz/cgi-bin/new-register?action=211&contest_id=125}\\
     Feel free to submit your solutions without attempt count penalty.
 
     \section{solutions}
+    \textbf{problem 37267}
     \lstinputlisting{37267.cpp}
+    \textbf{problem 71697}
     \lstinputlisting{71697.cpp}
+    \textbf{problem 51447}
     \lstinputlisting{51447.cpp}
+    \textbf{problem 51191}
     \lstinputlisting{51191.cpp}
-    \lstinputlisting{51445.cpp}
 
     \section{Additional tasks for this lab}
     You can solve problems starting from A to J from the link below:\\
     \url{https://informatics.msk.ru/mod/statements/view.php?id=2296}\\
-    \textit{note: statements are in russian}
+    \textit{note: statements in russian}
 
 \end{document}
