--- a/programming principles I/hands on labs/hol1/lab1.tex
+++ b/programming principles I/hands on labs/hol1/lab1.tex
@@ -46,6 +46,6 @@
     \section{Additional tasks for this lab}
     You can solve problems starting from A to J from the link below:\\
     \url{https://informatics.msk.ru/mod/statements/view.php?id=2296}\\
-    \textit{note: statements in russian}
+    \textit{note: statements are in russian}
 
 \end{document}
